Added caching configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ quarkus.log.category."org.demo.service".level=DEBUG
 # Entity Caching
 #quarkus.hibernate-orm.cache."org.demo.model.Account".memory.object-count=1000
 quarkus.hibernate-orm.cache."org.demo.model.Account".expiration.max-idle=10
+
+quarkus.hibernate-orm.cache."default-query-results-region".expiration.max-idle=10
